--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     }
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "jsonc-parser": "^3.3.1",
     "toml": "^3.0.0",
     "xml2js": "^0.6.2"
