--- a/package.json
+++ b/package.json
@@ -188,31 +188,37 @@
             "MIT",
             "Apache-2.0",
             "ISC",
-            "BSD-2-Clause",
             "BSD-3-Clause",
+            "BSD-2-Clause",
+            "0BSD",
             "Unlicense",
-            "MPL-2.0",
             "CC0-1.0",
+            "Python-2.0",
             "Zlib",
-            "Boost-1.0",
-            "Artistic-2.0",
-            "Eclipse-1.0",
-            "Eclipse-2.0",
-            "HPND" 
+            "PostgreSQL",
+            "OpenSSL",
+            "HPND",
+            "MPL-2.0",
+            "LGPL-2.1-or-later",
+            "LGPL-3.0-or-later",
+            "EPL-2.0"
           ],
           "description": "List of approved OSS licenses (case-insensitive). Uses standard SPDX identifiers."
         },
         "license-sentinel.deniedLicenses": {
           "type": "array",
           "default": [
-            "GPL-2.0",
-            "GPL-3.0",
-            "AGPL-3.0",
-            "LGPL-2.1",
-            "LGPL-3.0",
-            "CC-BY-NC",
-            "CC-BY-NC-SA",
-            "Commons-Clause"
+            "AGPL-3.0-only",
+            "AGPL-3.0-or-later",
+            "GPL-2.0-only",
+            "GPL-2.0-or-later",
+            "GPL-3.0-only",
+            "GPL-3.0-or-later",
+            "CC-BY-NC-4.0",
+            "CC-BY-NC-SA-4.0",
+            "Commons-Clause",
+            "WTFPL",
+            "JSON"
           ],
           "description": "List of explicitly denied OSS licenses (case-insensitive). Uses standard SPDX identifiers."
         },
